Bug 206694 - [EME] Key renewal fails when using AVContentKeyReportGroup
Summary: [EME] Key renewal fails when using AVContentKeyReportGroup
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Jer Noble
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2020-01-23 13:11 PST by Jer Noble
Modified: 2020-01-23 17:20 PST (History)
3 users (show)

See Also:


Attachments
Patch (1.97 KB, patch)
2020-01-23 13:15 PST, Jer Noble
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Jer Noble 2020-01-23 13:11:40 PST
[EME] Key renewal fails when using AVContentKeyReportGroup
Comment 1 Jer Noble 2020-01-23 13:12:04 PST
<rdar://problem/58628345>
Comment 2 Jer Noble 2020-01-23 13:15:04 PST
Created attachment 388585 [details]
Patch
Comment 3 WebKit Commit Bot 2020-01-23 17:20:06 PST
The commit-queue encountered the following flaky tests while processing attachment 388585 [details]:

editing/spelling/spellcheck-async-remove-frame.html bug 158401 (authors: morrita@google.com, rniwa@webkit.org, and tony@chromium.org)
The commit-queue is continuing to process your patch.
Comment 4 WebKit Commit Bot 2020-01-23 17:20:37 PST
Comment on attachment 388585 [details]
Patch

Clearing flags on attachment: 388585

Committed r255043: <https://trac.webkit.org/changeset/255043>
Comment 5 WebKit Commit Bot 2020-01-23 17:20:39 PST
All reviewed patches have been landed.  Closing bug.