Cherry-pick r255043. rdar://problem/58920158

[EME] Key renewal fails when using AVContentKeyReportGroup
    https://bugs.webkit.org/show_bug.cgi?id=206694
    <rdar://problem/58628345>

    Patch by Jer Noble <jer.noble@apple.com> on 2020-01-23
    Reviewed by Eric Carlson.

    When a CDMInstanceSession has a AVContentKeyReportGroup, it doesn't have an AVContentKeySession; it has
    to get the session from it's parent CDMInstance to request key renewal.

    * platform/graphics/avfoundation/objc/CDMInstanceFairPlayStreamingAVFObjC.mm:
    (WebCore::CDMInstanceSessionFairPlayStreamingAVFObjC::updateLicense):

    Canonical link: https://commits.webkit.org/219717@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255043 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/218903.128@safari-609-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-609-branch@255200 268f45cc-cd09-0410-ab3c-d52691b4dbfc